<resources>
    <string name="app_name">NoteMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="in_progress">In-progress</string>
    <string name="test">Test</string>
    <string name="done">Done</string>
    <string name="add_note">Add note</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task name*</string>
    <string name="task_description">Task description*</string>
    <string name="deadline">Deadline*</string>
    <string name="status">Status*</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="url">Url</string>
    <string name="task_detail">Task Details</string>
    <string name="edit_task">Edit Task</string>
    <string name="update">Update</string>
    <string name="success">Success</string>
    <string name="dialog_title">Task is saved successfully</string>
</resources>