<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.AddTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.NoteMe" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTaskName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTaskDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_description"
                    android:imeOptions="actionNext"
                    android:maxLines="3"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDeadline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:hint="@string/deadline"
                android:textColorHint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStatus"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:hint="@string/status"
                android:textColorHint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_down_arrow_solid"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUrl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_48"
                    android:layout_margin="@dimen/margin_16"
                    android:background="@drawable/bg_button_round"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>